* Put the mobile nav as a table. Still need to work on spacing * Fixed some spacing

--- a/layout2.css
+++ b/layout2.css
@@ -186,3 +186,11 @@ p {
 	width: 20%;
 	border: 1% solid black;
 }
+#contact h2 {
+	margin-bottom: 1%;
+}
+
+table {
+	margin-left: auto;
+	margin-right: auto;
+}
